--- a/system-setup/vim/INSTALL
+++ b/system-setup/vim/INSTALL
@@ -1,3 +1,9 @@
 # For reasons, also add the following alias to your .bash_aliases
 
 alias tmux='tmux -2'
+
+# Also, the first time you launch vim after this installation, use the command
+
+:PluginInstall
+
+# to install the remaining plugins
